# foolish-profit

./: Makefile  README.md  docker-compose.yml
graph-worker/: README.md  dockerfile  pyproject.toml
graph-worker/graph_worker/: config.py  graph.py  main.py  s3.py
graph-worker/tests/: test_graph_worker.py
price-worker/: README.rst  dockerfile  pyproject.toml
price-worker/price_worker/: db.sqlite3  main.py  persistance.py  producer.py
price-worker/tests/: test_price_worker.py
