[tool.poetry]
name = "graph-worker"
version = "0.1.0"
description = ""
authors = ["Derrick Hinkle <dhinkle@theknotww.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio-nats-client = "^0.11.2"
boto3 = "^1.16.0"
plotly = "^4.11.0"
psutil = "^5.7.2"
requests = "^2.24.0"
kaleido = "^0.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
