[tool.poetry]
name = "price-worker"
version = "0.1.0"
description = ""
authors = ["Cristiano Miranda <cmiranda@xogrp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio-nats-client = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
